--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,11 +10,46 @@ body {
 }
 h1, h2{
     font-family: Merriweather, sans-serif;
+    color: black;
+}
+    /* Nav and Logo*/
+    .nav-links{
+    text-align: center;
+    margin-top: 20px;
+}
+    
+.nav-links li{
+    
+    list-style: none;
+    display: inline-block;
+    position: relative;
+    padding: 4px 8px;
+    letter-spacing: 1px;
+    
+}
+#signin-button{
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    letter-spacing: 1px;
+}
+#logo{
+    position: absolute;
+    display: flex;
+    top: 16px;
+    left: 12px;
+    letter-spacing: 3px;
+    
 }
 
 /* Hero-Image */
 #hero-image{
-    background: url(..//images/Hero-image1.jpg);
+    background-image: url(../images/Hero-image1.jpg);
     width: 100%;
+    min-height: 90vh;
+    background-position: center;
+    background-size: cover;
+    position: relative;
+    margin-top: 30px;
     
 }
