--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,3 +69,16 @@ h1, h2{
     color: white;
     text-decoration: solid;
 }
+
+/* Reviews section*/
+.reviews h2,
+h4 {
+    text-align: center;
+    margin-top: 20px;
+}
+
+.reviews div p {
+    width: 300px;
+    padding: 10px;
+    border: 3px solid black;
+}
